# blend-ai

./: .gitignore  README.md  build.ps1  build.sh  install_addon.py  pyproject.toml  ssh.exe.stackdump
.github/workflows/: ci.yml  pylint.yml  release.yml  test-bpy51.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-expert-guidance-stability/: 02-01-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md
.planning/phases/04-security-new-tools/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/quick/260324-rns-fix-image-to-route-through-vision-model-/: 260324-rns-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
addon/: __init__.py  blender_manifest.toml  render_guard.py  server.py  thread_safety.py  ui_panel.py
addon/handlers/: armature.py  booltool.py  camera.py  code_exec.py  file_ops.py  geometry_nodes.py  gpencil.py  lighting.py  objects.py  physics.py  rendering.py  scene.py  sculpting.py  transforms.py
src/blend_ai/: __main__.py  connection.py  ollama_chat.py  server.py  tool_registry.py  validators.py
tests/: test_connection.py  test_installer.py  test_ollama_chat.py  test_validators.py
tests/test_addon/: test_module_cache_purge.py  test_render_guard.py  test_server.py  test_ui_panel.py
tests/test_tools/: test_auto_critique_prompt.py  test_code_exec.py  test_eevee_light_path.py  test_extensions.py  test_gpencil.py  test_mesh_quality.py  test_new_nodes.py  test_objects.py  test_rendering.py  test_sculpting.py  test_uv_slim.py
(+20 files in other folders)
